[project]
name = "mygpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.10",
    "langchain-cohere>=0.4.3",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "qdrant-client>=1.13.3",
]
